--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-key-handler": "^1.2.0-beta.3",
+    "react-scripts": "3.0.0",
+    "react-shapes": "^0.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
