--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "querystringify": ">=2.0.0"
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-key-handler": "^1.2.0-beta.3",
